most recent code

--- a/website.html
+++ b/website.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>RoBlix</title>
-    </head>
-    <body>
-<img src="heroSection.jpg" style="width:99%; height: 5%"> </img>
-    </body>
+
+<head>
+    <title>RoBlix</title>
+</head>
+
+<body>
+<div class="topContainer">
+    <img src="heroSection.jpeg" style="width:100%"> </img>
+    <link rel="heroSectionOverlay" href="style.css">
+</div>
+</body>
+
 </html>
