added sign in button and dropdown

--- a/WebFlicks.html
+++ b/WebFlicks.html
@@ -7,11 +7,15 @@
 
 <body>
     <h1 class="heroTitle">WebFlicks</h1>
-<div class="topContainer">
     <div class="heroSectionOverlay"></div>
     <img src="movieBackground.jpg" style="width:100%"> </img>
-</div>
-<div class="moviesSection">
+    <div class="navBar"></div>
+    <button class="signInButton">Sign in</button>
+<select class="LanguageDropdown">
+    <option value="English">English</option>
+    <option value="French">French</option>
+</select>
+    <div class="moviesSection">
 
 </div>
 </body>
