added sign up button

--- a/WebFlicks.html
+++ b/WebFlicks.html
@@ -11,6 +11,7 @@
     <img src="movieBackground.jpg" style="width:100%"> </img>
     <div class="navBar"></div>
     <button class="signInButton">Sign in</button>
+    <button class="signUpButton">Sign in</button>
 <select class="LanguageDropdown">
     <option value="English">English</option>
     <option value="French">French</option>
