added movie images

--- a/WebFlicks.html
+++ b/WebFlicks.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>WebFlicks</title>
     <link rel="stylesheet" href="style.css">
@@ -11,14 +12,14 @@
     <img src="movieBackground.jpg" style="width:100%"> </img>
     <div class="navBar"></div>
     <button class="signInButton">Sign in</button>
-    <button class="signUpButton">Sign in</button>
-<select class="LanguageDropdown">
-    <option value="English">English</option>
-    <option value="French">French</option>
-</select>
+    <button class="signUpButton">Sign up</button>
+    <select class="LanguageDropdown">
+        <option value="English">English</option>
+        <option value="French">French</option>
+    </select>
     <div class="moviesSection">
 
-</div>
+    </div>
 </body>
 
 </html>
