added cat movie to movie section

--- a/WebFlicks.html
+++ b/WebFlicks.html
@@ -18,7 +18,9 @@
         <option value="French">French</option>
     </select>
     <div class="moviesSection">
-
+    <div class="movie1">
+        <img src="catMan.png"> </img>
+    </div>
     </div>
 </body>
 
