added movies to the movies section

--- a/WebFlicks.html
+++ b/WebFlicks.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1 class="heroTitle">WebFlicks</h1>
+    <h1 class="title">WebFlicks</h1>
     <div class="heroSectionOverlay"></div>
     <img src="movieBackground.jpg" style="width:100%"> </img>
     <div class="navBar"></div>
@@ -18,9 +18,10 @@
         <option value="French">French</option>
     </select>
     <div class="moviesSection">
-    <div class="movie1">
-        <img src="catMan.png"> </img>
-    </div>
+        <h1 class="heroTitle">WebFlicks</h1>
+            <img src="crabGame2.png" class="image1"> </img>
+            <img src="catMan.png" class="image2"> </img>
+            <img src="missionPossible.png" class="image3"> </img>
     </div>
 </body>
 
