added more stuff

--- a/WebFlicks.html
+++ b/WebFlicks.html
@@ -8,8 +8,7 @@
 
 <body>
     <h1 class="title">WebFlicks</h1>
-    <div class="heroSectionOverlay"></div>
-    <img src="movieBackground.jpg" style="width:100%"> </img>
+    <img src="movieBackground.jpg" class="background"> </img>
     <div class="navBar"></div>
     <button class="signInButton">Sign in</button>
     <button class="signUpButton">Sign up</button>
@@ -18,10 +17,13 @@
         <option value="French">French</option>
     </select>
     <div class="moviesSection">
-        <h1 class="heroTitle">WebFlicks</h1>
+        <h1 class="movieTitle">Top 3 movies trending now</h1>
             <img src="crabGame2.png" class="image1"> </img>
             <img src="catMan.png" class="image2"> </img>
             <img src="missionPossible.png" class="image3"> </img>
+            <button class="rentButton1">Rent Now for only $69.99!</button>
+            <button class="rentButton2">Rent Now for only $59.99!</button>
+            <button class="rentButton3">Rent Now for only $49.99!</button>
     </div>
 </body>
 
