started working on the footer section

--- a/WebFlicks.html
+++ b/WebFlicks.html
@@ -25,6 +25,7 @@
             <button class="rentButton2">Rent Now for only $59.99!</button>
             <button class="rentButton3">Rent Now for only $49.99!</button>
     </div>
+    <h1 class="footer section">© 2025 WebFlicks. All rights reserved.</h1>
 </body>
 
 </html>
