--- a/WebFlicks.html
+++ b/WebFlicks.html
@@ -9,6 +9,7 @@
 <body>
     <h1 class="title">WebFlicks</h1>
     <img src="movieBackground.jpg" class="background"> </img>
+    <h1 class="heroText">Rent all of the latest and greatest shows starting from $0.99!</h1>
     <div class="navBar"></div>
     <button class="signInButton">Sign in</button>
     <button class="signUpButton">Sign up</button>
@@ -23,9 +24,15 @@
             <img src="missionPossible.png" class="image3"> </img>
             <button class="rentButton1">Rent Now for only $69.99!</button>
             <button class="rentButton2">Rent Now for only $59.99!</button>
-            <button class="rentButton3">Rent Now for only $49.99!</button>
+            <button class="rentButton3">Rent Now for only $0.99!</button>
     </div>
-    <h1 class="footer section">© 2025 WebFlicks. All rights reserved.</h1>
+    <div class="footerSection">
+        <h3 class="footerTitle1">Info</h3>
+        <h4 class="links1">About | Contact | FAQ | Privacy Policy | Terms of Uses</h4>
+        <h3 class="footerTitle2">Follow us</h3>
+        <h4 class="links2">Instagram | X | Facebook</h4> 
+        <h5 class="copyright">© 2025 WebFlicks. All rights reserved.</h5>
+    </div>
 </body>
 
 </html>
